--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -80,7 +80,12 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">I've got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">
+                        Natural problem solver with strong interpersonal skills.
+                        Background with object-oriented programming.
+                        Dedication to simplifying code and managing complexity.
+                        Superb reading comprehension.
+                    </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">More Skills!</a>
                 </div>
             </div>
@@ -242,7 +247,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>+1-(431)-336-6976</p>
+                    <p><a href="tel://(431)-336-6976">+1-(431)-336-6976</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
@@ -281,11 +286,11 @@
                                         <div class="row h5">
                                             <div class="col-md-1"></div>
                                             <div class="col-md-6">
-                                                <div class="row h6">Number1 <input type="text" id="input1"></div>
-                                                <div class="row h6">Number2 <input type="text" id="input2"></div>
-                                                <div class="row h6">Number3 <input type="text" id="input3"></div>
-                                                <div class="row h6">Number4 <input type="text" id="input4"></div>
-                                                <div class="row h6">Number5 <input type="text" id="input5"></div>
+                                                <div class="row h6">Number1 <input type="number" id="input1"></div>
+                                                <div class="row h6">Number2 <input type="number" id="input2"></div>
+                                                <div class="row h6">Number3 <input type="number" id="input3"></div>
+                                                <div class="row h6">Number4 <input type="number" id="input4"></div>
+                                                <div class="row h6">Number5 <input type="number" id="input5"></div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="row h6">
@@ -340,8 +345,8 @@
                                         <div class="row h4">
                                             <div class="col-md-1"></div>
                                             <div class="col-md-11">
-                                                <div class="row h6">Number1 <input type="text" id="fbnum1"></div>
-                                                <div class="row h6">Number2 <input type="text" id="fbnum2"></div>
+                                                <div class="row h6">Number1 <input type="number" id="fbnum1"></div>
+                                                <div class="row h6">Number2 <input type="number" id="fbnum2"></div>
                                             </div>
                                             <div class="row h6">
                                                 <div class="col-md-1"></div>
@@ -390,12 +395,14 @@
                                         </div>
                                         <div class="row h4">
                                             <div class="col-md-1"></div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-11">
                                                 <div class="row h6">Enter a number <input type="text" id="input7"></div>
                                             </div>
-                                            <div class="row h4">
-                                                <div class="col-md-5" id="factor"></div>
-                                                </div>
+                                            <div class="row h6">
+                                                <div class="col-md-3"></div>
+                                                <div class="col-md-6" id="factor"></div>
+                                                <div class="col-md-3"></div>
+                                            </div>
                                             </div>
                                             <div class="row h4">
                                                 <div class="col-md-8"></div>
@@ -434,21 +441,25 @@
                                         </div>
                                         <div class="row h4">
                                             <div class="col-md-1"></div>
-                                            <div class="col-md-6">
-                                                <div class="row h5">Enter a word<input type="text" id="input6"></div>
+                                            <div class="col-md-11">
+                                                <div class="row h6">Enter a word   <input type="text" id="input6"></div>
                                             </div>
-                                            <div class="col-md-5" id="reverse"></div>
-                                        </div>
-                                        <div class="row h4">
-                                            <div class="col-md-8"></div>
-                                            <div class="col-md-2">
-                                                <div class="row h5"><button id="btnmath2" type="button" class="btn btn-success">check</button></div>
-                                                <div class="row h5"><button id="btnmath12" type="button" class="btn btn-info">Show code</button></div>
+                                            <div class="row h6">
+                                                <div class="col-md-3"></div>
+                                                <div class="col-md-6" id="reverse"></div>
+                                                <div class="col-md-3"></div>
                                             </div>
-                                            <div class="col-md-2"></div>
-                                        </div>
-                                        <div id="pre4">
-                                            <pre class="brush: js">
+                                            </div>
+                                            <div class="row h4">
+                                                <div class="col-md-8"></div>
+                                                <div class="col-md-2">
+                                                    <div class="row h5"><button id="btnmath2" type="button" class="btn btn-success">check</button></div>
+                                                    <div class="row h5"><button id="btnmath12" type="button" class="btn btn-info">Show code</button></div>
+                                                </div>
+                                                <div class="col-md-2"></div>
+                                            </div>
+                                            <div id="pre4">
+                                                <pre class="brush: js">
                                                             var isPalindrome = function (string) {
                                                             if (string == string.split('').reverse().join('')) {
                                                                 $("#reverse").text(string + ' is a palindrome.')
@@ -463,8 +474,8 @@
                                                             })
 
                                                         </pre>
+                                            </div>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
